feat(logging): add detailed logging for dataset loading to include variable names
- Updated logging messages to include both the filename and the corresponding variable name for each loaded dataset.
- Configured logging to output directly to the console at INFO level.
- Enhanced visibility by providing clearer information on which datasets are loaded into which variables.
- Removed logging to a file and ensured that all messages are logged at INFO level to prevent colored output.
- Maintained Google Python Style Guide compliance, ensuring that the module remains clean and easy to maintain.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = ""
 authors = ["Vytautas Bunevičius"]
 license = "Unlicense"
 readme = "README.md"
+packages = [
+    { include = "covid19_south_korea_analysis", from = "src" }
+]
+
 
 [tool.poetry.dependencies]
 python = "^3.12"
