--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.4
 asttokens==2.4.1
+attrs==24.2.0
 build==1.2.2.post1
 CacheControl==0.14.0
 certifi==2024.8.30
@@ -8,6 +9,7 @@ charset-normalizer==3.4.0
 cleo==2.1.0
 comm==0.2.2
 contourpy==1.3.0
+-e git+https://github.com/vytautas-bunevicius/covid19-south-korea-analysis.git@33aed612025ec38c325f7bb008fad5ca926e01b9#egg=covid19_south_korea_analysis
 crashtest==0.4.1
 cycler==0.12.1
 debugpy==1.8.7
@@ -25,6 +27,8 @@ ipykernel==6.29.5
 ipython==8.29.0
 jaraco.classes==3.4.0
 jedi==0.19.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keyring==24.3.1
@@ -33,6 +37,7 @@ matplotlib==3.9.2
 matplotlib-inline==0.1.7
 more-itertools==10.5.0
 msgpack==1.1.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.1.3
 packaging==24.1
@@ -60,8 +65,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 RapidFuzz==3.10.1
+referencing==0.35.1
 requests==2.32.3
 requests-toolbelt==1.0.0
+rpds-py==0.20.1
 scipy==1.14.1
 seaborn==0.13.2
 shellingham==1.5.4
